Issue 120 compliance report updates (#121)
* Updating config to better deal with local setup

* Removing debug code

* Updating config to better deal with local setup

* Removing debug code

* Removing debug code (+3 squashed commits)
Squashed commits:
[d498924] Updating config to better deal with local setup
[81c6c5b] Removing debug code
[561f4f1] Updating config to better deal with local setup

Removing debug code

Updating config to better deal with local setup

Removing debug code

* This should be a good first stab at the requested changes

* Syntax fixes

--- a/application/resources/stylesheets/compliance.css
+++ b/application/resources/stylesheets/compliance.css
@@ -12,6 +12,17 @@
     border-radius: 4px;
 }
 
+.booking_results_header {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    border-bottom: 2px solid rgb(82, 82, 82);
+    margin-left: 2em;
+    margin-right: 2em;
+    padding-bottom: 0.25em;
+}
+
 .green {
     background-color: rgb(150, 230, 150);
 }
